turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:4: error: STOP is already defined as value STOP
val STOP : Int = 0
    ^Turmite:4: error: STOP  is already defined as value STOP
val STOP : Int = 0
    ^Turmite:26: error: type mismatch;
 found   : java.awt.Color
 required: Int
  setCouleurSol(rule(state)(couleurActuelle)(0))
                            ^Turmite:29: error: type mismatch;
 found   : java.awt.Color
 required: Int
  if (rule(state)(couleurActuelle)(1) == DEVANT) {avance()}
                  ^Turmite:30: error: type mismatch;
 found   : java.awt.Color
 required: Int
  if (rule(state)(couleurActuelle)(1) == GAUCHE) {gauche() ; avance()}
                  ^Turmite:31: error: type mismatch;
 found   : java.awt.Color
 required: Int
  if (rule(state)(couleurActuelle)(1) == ARRIERE) {retourne() ; avance()}
                  ^Turmite:32: error: type mismatch;
 found   : java.awt.Color
 required: Int
  if (rule(state)(couleurActuelle)(1) == DROITE) {droite() ; avance()}
                  ^Turmite:35: error: type mismatch;
 found   : java.awt.Color
 required: Int
  state = rule(state)(couleurActuelle)(2)
                      ^